minio-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cs-minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-http01
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cs-minio.txuyen.com
      secretName: cs-minio-tls
  rules:
    - host: cs-minio.txuyen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cs-minio-external
                port:
                  number: 9001

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1g"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-http01
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - storage.txuyen.com
      secretName: storage-tls
  rules:
    - host: storage.txuyen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storage-external
                port:
                  number: 9000
